--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
+    "cmake.configureEnvironment": {
+        "PICO_SDK_PATH": "/pico/pico-sdk"
+    },
+    "cmake.generator": "Unix Makefiles",
+    "cmake.configureOnOpen": true,
     "C_Cpp.loggingLevel": "Debug",
     "cmake.loggingLevel": "debug",
     "files.associations": {
