Adds includes to CMakeLists to work around error

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,6 +11,8 @@ pico_sdk_init()
 
 add_executable(test
   test.c
+  testinc/testinc.h
+  testinc/testinc.c
 )
 target_include_directories(test PUBLIC testinc)
 
